<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activities.tramites.TitularFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/id_card_titular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:cardBackgroundColor="@color/colorPrimaryDark"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <TextView
                android:id="@+id/id_texto_titular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_titular_completo"
                android:textColor="#FFFFFF"
                android:textSize="16dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"/>

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_titular_segundo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/id_card_titular"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/id_texto_titular_segundo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_titular_segundo"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_titular_tercero"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/id_card_titular_segundo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/id_texto_titular_tercero"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_titular_tercero"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/id_card_titular_cuarto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/id_card_titular_tercero"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                app:cardBackgroundColor="@color/colorPrimaryDark"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <TextView
                    android:id="@+id/id_texto_titular_cuarto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/texto_titular_cuarto"
                    android:textColor="#FFFFFF"
                    android:textSize="16dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"/>

            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</FrameLayout>